practice2 on promisis

--- a/28aprl/task2/promises2.html
+++ b/28aprl/task2/promises2.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-    	<p>Promisis with then property callback</p>
+    	<p>Promisis with then property callback(then)</p>
     	<button onclick="run()">click me  and look into the cons</button>
     	<button onclick="run2()">click me  and look into the console for bad promise</button>
         <script>
